# apart-physics

./: .gitignore  README.md  analysis.ipynb  arithmetic_dataset_train.jsonl  arithmetic_dataset_validation.jsonl  custom_trainer.py  dev.ipynb  generate_dataset.py  grokking.ipynb  grpo.py  llc.py  pyproject.toml
arithmetic_dataset/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
arithmetic_dataset/validation/: data-00000-of-00001.arrow  state.json
puzzle_dataset/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
puzzle_dataset/validation/: data-00000-of-00001.arrow  state.json
results/: create_plots.ipynb  llc_results.csv  wandb_accuracies.csv  wandb_results.csv
