[project]
name = "apart-physics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.46.1",
    "devinterp>=1.3.2",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "peft>=0.16.0",
    "transformers>=4.54.0",
    "trl>=0.19.1",
    "wandb>=0.21.0",
]
